--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,6 +113,10 @@ a.nav-link {
     font-weight: 500;
 }
 
+.user-nav {
+    left: 0;
+}
+
 
 .profile-pic {
     height: 40px;
@@ -255,7 +259,7 @@ a.img-container:hover {
 }
 
 .btn-group a {
-    color:var(--yellowish)
+    color: var(--yellowish)
 }
 
 .btn-group {
@@ -488,6 +492,12 @@ a.img-container:hover {
     width: 100%;
 }
 
+@media (min-width: 550px) {
+    #navbarNav {
+        display: flex !important;
+        flex-basis: auto !important;
+    }
+}
 
 @media screen and (min-width:40em) {
     .form {
@@ -562,28 +572,28 @@ a.img-container:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .search {
+}
+
+.search {
     margin: 20px;
-  }
-  
-  .search > h3 {
+}
+
+.search>h3 {
     font-weight: normal;
-  }
-  
-  .search > h1,
-  .search > h3 {
+}
+
+.search>h1,
+.search>h3 {
     color: white;
     margin-bottom: 15px;
-  }
-  
-  .search > div {
+}
+
+.search>div {
     display: inline-block;
     position: relative;
-  }
-  
-  .search > div:after {
+}
+
+.search>div:after {
     content: "";
     background: white;
     width: 4px;
@@ -592,9 +602,9 @@ a.img-container:hover {
     top: 40px;
     right: 2px;
     transform: rotate(135deg);
-  }
-  
-  .search > div > input {
+}
+
+.search>div>input {
     color: white;
     font-size: 16px;
     background: transparent;
@@ -605,19 +615,19 @@ a.img-container:hover {
     outline: none;
     border-radius: 35px;
     transition: width 0.5s;
-  }
-  
-  .search > div > input::placeholder {
+}
+
+.search>div>input::placeholder {
     color: #efefef;
     opacity: 0;
     transition: opacity 150ms ease-out;
-  }
-  
-  .search > div > input:focus::placeholder {
+}
+
+.search>div>input:focus::placeholder {
     opacity: 1;
-  }
-  
-  .search > div > input:focus,
-  .search > div > input:not(:placeholder-shown) {
+}
+
+.search>div>input:focus,
+.search>div>input:not(:placeholder-shown) {
     width: 250px;
-  }
+}
