--- a/recipe/templates/recipe/recipe_view.html
+++ b/recipe/templates/recipe/recipe_view.html
@@ -33,7 +33,7 @@
     {% if request.user == recipe.user %}
     <div class="text-center">
         <a href="{% url 'edit_recipe' recipe.pk %}" class="btn btn-primary w-25">Edit</a>
-        <a href="{% url 'delete_recipe' recipe.pk %}" class="btn btn-primary w-25">Delete</a>
+        <a id="delete" href="{% url 'delete_recipe' recipe.pk %}" class="btn btn-primary w-25">Delete</a>
     </div>
     {% endif %}
 </div>
