New style to profile page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,7 @@ main {
     font-family: var(--main-font);
     font-weight: 500;
     margin-bottom: 60px;
+    color: var(--black)
 }
 
 /*---------------------------------------------------------------------------- Footer */
@@ -543,6 +544,31 @@ a.img-container:hover {
 }
 
 /* ----------------------------------------------------------------------------Profiles */
+
+.profile {
+    background-color: rgba(0, 0, 0, 0.6);
+    margin-top: 40px;
+    padding: 30px;
+}
+
+.info > h1, p {
+    color:var(--off-white);
+}
+
+.profile-recipes > h2 {
+    color:var(--yellowish);
+}
+
+.profile-recipes > a {
+    color:var(--yellowish);
+}
+.profile-recipes > p {
+    color:var(--off-white);
+}
+
+hr {
+    border-top: 1px solid #f6f6f6;
+}
 
 .profile-img {
     width: 280px;
