--- a/profiles/templates/profiles/profiles.html
+++ b/profiles/templates/profiles/profiles.html
@@ -33,8 +33,8 @@
             <a href="{% url 'recipe_view' recipe.id %}">
                 <h3>{{ recipe.title }}</h3>
             </a>
-            {{ recipe.post_date }}
-            <hr>
+            <p>{{ recipe.post_date }}</p>
+            <hr class="recipe-hr">
             {% endfor %}
         </div>
     </div>
