--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -5,21 +5,23 @@
 {% block title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="container text-center">
-  <h1>{% trans "Sign In" %}</h1>
+<section class="signin-section">
+  <div class="container">
+      <form method="POST" class="p-4 form" id="signin_form" action="{% url 'account_login' %}">
+          <h1 class="text-center">Sign In</h1>
+          {% csrf_token %}
+          {{ form|crispy }}
 
-  <p>{% blocktrans %}If you have not created an account yet, then please
-  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
 
-
-  <form class="form p-2" method="POST" action="{% url 'account_login' %}">
-    {% csrf_token %}
-    {{ form|crispy }}
-    {% if redirect_field_value %}
-    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-    {% endif %}
-    <button class="btn btn-primary w-25 mb-2" type="submit">{% trans "Sign In" %}</button>
-    <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  </form>
-</div>
+          <div class="text-center">
+              <p>If you have not created an account yet, then please <a href="{{ signup_url }}">sign up</a> first.</p>
+              <button class="btn btn-primary w-25 mb-2" type="submit">Sign In</button>
+              <a class="button secondaryAction d-block" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+          </div>
+      </form>
+  </div>
+</section>
 {% endblock %}
