--- a/recipe/templates/recipe/recipe_list.html
+++ b/recipe/templates/recipe/recipe_list.html
@@ -27,7 +27,7 @@
     </div>
     <div class="browse-container">
         <div class="card-title-container">
-            <section class="cards">
+            <div class="cards">
                 {% for recipe in recipes %}
                 <article class="card card--1">
                     <div class="card__info-hover">
@@ -54,7 +54,7 @@
                     </div>
                 </article>
                 {% endfor %}
-            </section>
+            </div>
         </div>
     </div>
 
